UPDATE EXCLUDES TEST

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:32774/test?autoReconnect=true&useSSL=false
 spring.datasource.username=dbUser
 spring.datasource.password=hot2018!
+
+# i18N
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
+
+debug=true
