--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
 
 debug=true
+
+#jackson
+spring.jackson.serialization.indent_output=true
